Bug 248088 - Not possible to see if a window is minimized or just in the background or foreground on the task bar
Summary: Not possible to see if a window is minimized or just in the background or for...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: unspecified
Platform: RedHat Enterprise Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-16 21:14 UTC by Staffan Hamala
Modified: 2011-12-03 20:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Staffan Hamala 2010-08-16 21:14:05 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                Linux

In KDE 3.* you could easily see which windows in the taskbar were minimized, which were in the background, and which were in the foreground. Since KDE 4 this is not possible. I have waited for this feature since upgrading to KDE 4.

It's the most important thing, where I still consider KDE 3 to be far superior to KDE 4.

I'll admit that the active window has a blue outline in the task bar, but if you happen to have your mouse pointer over an inactive window (in the taskbar), you have two windows in the list with a blue outline...

What I want is to have it clearly visible which window is in which state  (maybe as an option).

I have the taskbar set to:
NOT group windows.
Show windows from only the current virtual desktop.
Show both minimized and active windows.

I use focus-follows-mouse, but I don't think this is important.


Reproducible: Always

Steps to Reproduce:
Open a few windows. For example firefox and three terminal windows.
Let firefox cover the whole screen.
Minimize one of the windows, and move firefox in front of the other windows.
Try to guess which of the windows in the taskbar is the minimized one.

Another way:
Start four terminal windows.
Maximize all of them.
Write something in all of them to recognize them, for example write one, two, three and four at the command prompt.
Let a friend reorder things for you. Move the windows to the background and foreground. Minimize two.

Try to move the window in the background in front of the window in the foreground by clicking on the right button in the task bar.

Not easy!


Actual Results:  
Pure guesswork. You'll never know which window is which.

Try the same exercise with 20 terminal windows..

Expected Results:  
Easy to locate which window is minimized and which are in the background.
Comment 1 Marco Martin 2011-12-03 20:37:42 UTC
Git commit 6a740b578885d79dfe302acfba0f42e4b8d0cdc3 by Marco Martin.
Committed on 03/12/2011 at 21:34.
Pushed by mart into branch 'master'.

more transparent minimized task, they stick out more

CCBUG:248088

M  +-    --    desktoptheme/air/widgets/tasks.svgz

http://commits.kde.org/kde-runtime/6a740b578885d79dfe302acfba0f42e4b8d0cdc3
Comment 2 Aaron J. Seigo 2011-12-03 20:45:24 UTC
Git commit 27dae38dc2767bd41a5efbb545287523a6ecd6ca by Aaron Seigo.
Committed on 03/12/2011 at 21:44.
Pushed by aseigo into branch 'master'.

make it clearer when a window is minimized by halfing the opacity of the text. elegant, clean and most importantly clear

BUG:248088

M  +1    -1    plasma/desktop/applets/tasks/abstracttaskitem.cpp

http://commits.kde.org/kde-workspace/27dae38dc2767bd41a5efbb545287523a6ecd6ca