make it clearer when a window is minimized by halfing the opacity of the text. elegant, clean and most importantly clear

BUG:248088